

export type Review = {
  _id: string;
  _creationTime: number;
  bookingId: string;
  rating: number;
  userId: string;
  comment: string;
  numberOfStars: number;
  reviewDate: string;
};

